Add css over all elements and add link css.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,12 +1,17 @@
 /* Selected all elements for the Background color */
 * {
+  font-family: Verdana, sans-serif;
   background-color: black;
+  text-align: center;
 }
 
 h1{
-  font-family: Verdana, sans-serif;
   font-weight: normal;
   font-size: 50px;
   color: white;
-  text-align: center;
+}
+
+:link {
+  color: aquamarine;
+  font-size: 16px;
 }
