--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,17 +18,20 @@ h1{
   font-size: 16px;
 }
 
+/* All h2 elements */
 h2 {
   font-weight: 300;
   font-size: 42px;
   color: White;
 }
 
+/* Paragraph text underneath video */
 .interest {
   font-size: 21px;
   color: Gray;
 }
 
+/* Copyright Symbol */
 #copy {
   text-align: right;
   color: Gray;
